tests/miz/pass/types/pass_type_elaboration_reserved_variable_equality_001.miz
reserve x for set;
theorem ReservedVariableEqualityPayloadBoundary: x = x;
