tests/miz/fail/types/fail_type_elaboration_builtin_type_assertion_formula_gap_001.miz
theorem BuiltinTypeAssertionPayloadBoundary: 1 is set;
